<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('book_category', function (Blueprint $table) {
            $table->id();
            $table->unsignedBigInteger('book_id'); // 本id
            $table->unsignedBigInteger('category_id'); // カテゴリid
            $table->timestamps();

            // 本idに外部キー制約を付与
            $table->foreign('book_id')->references('id')->on('books');
            // カテゴリidに外部キー制約を付与
            $table->foreign('category_id')->references('id')->on('categories');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('book_categories');
    }
};
